# arc_simulation

./: README.md
erod_control/: CMakeLists.txt  README.md  package.xml
erod_control/config/: erod_control.yaml
erod_control/launch/: erod_control.launch
erod_control/src/: eRodGZInterface.cpp  eRodGZInterface.hpp  eRodGZInterface_node.cpp
erod_description/: CMakeLists.txt  README.md  package.xml
erod_description/urdf/: camera.xacro  erod.gazebo  erod.xacro  laser.xacro  laser2.xacro  macros.xacro  materials.xacro  properties.xacro
erod_gazebo/: CMakeLists.txt  README.md  package.xml
erod_gazebo/launch/: erod_world.launch  globalSim.launch
erod_gazebo/worlds/: erod.world
