<?xml version="1.0"?>
<package>
  <name>erod_control</name>
  <version>0.0.0</version>
  <description>The erod_control package</description>

  <maintainer email="vymanic@gmail.com">Nikhilesh</maintainer>
  <license>TODO</license>

  <url type="repository">https://github.com/ProjectARCeth/erod_control</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>ackermann_msgs</build_depend>

  <run_depend>ackermann_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>catkin_simple</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
